# espresso-ble

./: README.md  pyproject.toml
src/ble-peripheral/: app.py  ble.py
